--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "source": "https://github.com/7ute/directavel/tree/v1.0.0"
     },
     "require": {
-        "php": ">=8.0",
+        "php": ">=8.1",
         "laravel/framework": "^10.0"
     },
     "require-dev": {
@@ -46,7 +46,7 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/phpunit"
+        "test": "vendor/bin/pest"
     },
     "extra": {
         "laravel": {
