--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,10 +16,9 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest]
         php: ['8.1', '8.2']
         dependency-version: [prefer-lowest, prefer-stable]
-        laravel: [10.*]
         stability: [prefer-lowest, prefer-stable]
         include:
           - laravel: 10.*
