--- a/composer.json
+++ b/composer.json
@@ -46,7 +46,7 @@
         }
     },
     "scripts": {
-        "test": "vendor/bin/pest"
+        "test": "vendor/bin/pest --coverage --bail"
     },
     "extra": {
         "laravel": {
